; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/ipc-util/ipc-util/extr_pipe-windows.c_create_full_access_security_descriptor.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/ipc-util/ipc-util/extr_pipe-windows.c_create_full_access_security_descriptor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SECURITY_DESCRIPTOR_MIN_LENGTH = common dso_local global i32 0, align 4
@SECURITY_DESCRIPTOR_REVISION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @create_full_access_security_descriptor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @create_full_access_security_descriptor() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = load i32, i32* @SECURITY_DESCRIPTOR_MIN_LENGTH, align 4
  %4 = call i8* @malloc(i32 %3)
  store i8* %4, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %0
  store i8* null, i8** %1, align 8
  br label %24

8:                                                ; preds = %0
  %9 = load i8*, i8** %2, align 8
  %10 = load i32, i32* @SECURITY_DESCRIPTOR_REVISION, align 4
  %11 = call i32 @InitializeSecurityDescriptor(i8* %9, i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %8
  br label %21

14:                                               ; preds = %8
  %15 = load i8*, i8** %2, align 8
  %16 = call i32 @SetSecurityDescriptorDacl(i8* %15, i32 1, i32* null, i32 0)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %14
  br label %21

19:                                               ; preds = %14
  %20 = load i8*, i8** %2, align 8
  store i8* %20, i8** %1, align 8
  br label %24

21:                                               ; preds = %18, %13
  %22 = load i8*, i8** %2, align 8
  %23 = call i32 @free(i8* %22)
  store i8* null, i8** %1, align 8
  br label %24

24:                                               ; preds = %21, %19, %7
  %25 = load i8*, i8** %1, align 8
  ret i8* %25
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @InitializeSecurityDescriptor(i8*, i32) #1

declare dso_local i32 @SetSecurityDescriptorDacl(i8*, i32, i32*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
